<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:padding="5dp" android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" tools:context=".ActMain">
    <TableLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:shrinkColumns="*" android:stretchColumns="*">
	    <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
	        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lblNextNumber" android:textAppearance="?android:attr/textAppearanceMedium"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="end"
				android:text="@string/lblTestTime"
				android:textAppearance="?android:attr/textAppearanceMedium" />
	    </TableRow>
	    <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
	        <TextView android:id="@+id/tvNextNo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/bkgndindicator" android:text="0" android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#0f0"/>

			<TextView
				android:id="@+id/tvTime"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="5dp"
				android:background="@drawable/bkgndindicator"
				android:gravity="end"
				android:text="0:00:00"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="#0f0" />
	    </TableRow>
	</TableLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0dp" android:layout_marginTop="10dp" android:layout_weight="3">
        <LinearLayout android:id="@+id/tblPlay" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/bkgndboard" android:orientation="vertical" android:padding="5dp"/>
        <TextView android:id="@+id/tvFinishInfo" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#A0D0D0D0" android:gravity="center" android:text="@string/gameOver" android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#B00000" android:textSize="36sp" android:textStyle="italic"/>
	</FrameLayout>
    <LinearLayout android:layout_height="0dp" android:layout_width="fill_parent" android:layout_weight="1" android:orientation="horizontal">
        <Button android:id="@+id/btnNewGame" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="bottom" android:layout_weight="1" android:drawableTop="@drawable/ic_menu_home" android:text="@string/newGame"/>
        <Button android:id="@+id/btnShuffle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="bottom" android:layout_weight="1" android:drawableTop="@drawable/ic_menu_refresh" android:text="@string/shuffle"/>
        <Button android:id="@+id/btnHelp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="bottom" android:layout_weight="1" android:drawableTop="@drawable/ic_menu_help" android:text="@string/help"/>
    </LinearLayout>
</LinearLayout>